--- a/sources/Device/DeviceOSC.uvprojx
+++ b/sources/Device/DeviceOSC.uvprojx
@@ -2485,6 +2485,11 @@
               <FileType>8</FileType>
               <FilePath>.\src\Menu\Pages\PageDisplay\PageDisplay.cpp</FilePath>
             </File>
+            <File>
+              <FileName>PageDisplay_Accumulation.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Menu\Pages\PageDisplay\PageDisplay_Accumulation.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
