Рефакторинг страницы Дисплей

--- a/sources/Device/DeviceOSC.uvprojx
+++ b/sources/Device/DeviceOSC.uvprojx
@@ -2500,6 +2500,11 @@
               <FileType>8</FileType>
               <FilePath>.\src\Menu\Pages\PageDisplay\PageDisplay_Grid.cpp</FilePath>
             </File>
+            <File>
+              <FileName>PageDisplay_Settings_Colors.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Menu\Pages\PageDisplay\PageDisplay_Settings_Colors.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
