--- a/sources/OSC-VS/Device/FPGA.vcxproj.filters
+++ b/sources/OSC-VS/Device/FPGA.vcxproj.filters
@@ -872,6 +872,9 @@
     <ClInclude Include="..\..\Device\src\Menu\Pages\Include\PageTrig.h">
       <Filter>Menu\Pages\Include</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Device\src\Object.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\Device\src\libs\CMSIS\startup_stm32f437xx.s">
