--- a/sources/OSC-VS/Device/FPGA.vcxproj.filters
+++ b/sources/OSC-VS/Device/FPGA.vcxproj.filters
@@ -456,6 +456,7 @@
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageDisplay\PageDisplay_Settings.cpp">
       <Filter>Menu\Pages\PageDisplay</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Device\src\stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal.h">
@@ -875,6 +876,7 @@
     <ClInclude Include="..\..\Device\src\Object.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Device\src\stdafx.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\Device\src\libs\CMSIS\startup_stm32f437xx.s">
