--- a/sources/OSC-VS/Device/FPGA.vcxproj
+++ b/sources/OSC-VS/Device/FPGA.vcxproj
@@ -47,7 +47,6 @@
     <ClCompile Include="..\..\Device\src\Data\Reader.cpp" />
     <ClCompile Include="..\..\Device\src\Data\Storage.cpp" />
     <ClCompile Include="..\..\Device\src\defines.cpp" />
-    <ClCompile Include="..\..\Device\src\Device.cpp" />
     <ClCompile Include="..\..\Device\src\Display\Colors.cpp" />
     <ClCompile Include="..\..\Device\src\Display\Console.cpp" />
     <ClCompile Include="..\..\Device\src\Display\Display.cpp" />
@@ -83,7 +82,6 @@
     <ClCompile Include="..\..\Device\src\libs\HAL\stm32f4xx_hal_msp.cpp" />
     <ClCompile Include="..\..\Device\src\libs\USBH\usbh_conf.cpp" />
     <ClCompile Include="..\..\Device\src\libs\USBH\usbh_diskio.cpp" />
-    <ClCompile Include="..\..\Device\src\Log.cpp" />
     <ClCompile Include="..\..\Device\src\main.cpp" />
     <ClCompile Include="..\..\Device\src\Menu\BufferButtons.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
@@ -164,7 +162,9 @@
     <ClCompile Include="..\..\Device\src\Settings\SettingsTransformation.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="..\..\Device\src\Tables.cpp" />
+    <ClCompile Include="..\..\Device\src\stdafx.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="..\..\Device\src\Tester\Tester.cpp" />
     <ClCompile Include="..\..\Device\src\Tester\TesterGraphics.cpp" />
     <ClCompile Include="..\..\Device\src\Utils\CommonFunctions.cpp" />
@@ -220,29 +220,10 @@
     <ClInclude Include="..\..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Core\Inc\usbh_pipes.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClInclude>
-    <ClInclude Include="..\..\common\_VS\cmsis_armcc.h" />
-    <ClInclude Include="..\..\common\_VS\cmsis_armcc_V6.h" />
-    <ClInclude Include="..\..\common\_VS\core_cm4.h" />
-    <ClInclude Include="..\..\common\_VS\core_cmFunc.h" />
-    <ClInclude Include="..\..\common\_VS\core_cmInstr.h" />
-    <ClInclude Include="..\..\common\_VS\core_cmSimd.h" />
-    <ClInclude Include="..\..\common\_VS\ctype.h" />
-    <ClInclude Include="..\..\common\_VS\integer.h" />
-    <ClInclude Include="..\..\common\_VS\inttypes.h" />
-    <ClInclude Include="..\..\common\_VS\limits.h" />
-    <ClInclude Include="..\..\common\_VS\math.h" />
-    <ClInclude Include="..\..\common\_VS\stdarg.h" />
-    <ClInclude Include="..\..\common\_VS\stdint.h" />
-    <ClInclude Include="..\..\common\_VS\stdio.h" />
-    <ClInclude Include="..\..\common\_VS\stdlib.h" />
-    <ClInclude Include="..\..\common\_VS\string.h" />
-    <ClInclude Include="..\..\common\_VS\tchar.h" />
-    <ClInclude Include="..\..\common\_VS\windows.h" />
     <ClInclude Include="..\..\Device\src\Data\DataSettings.h" />
     <ClInclude Include="..\..\Device\src\Data\Reader.h" />
     <ClInclude Include="..\..\Device\src\Data\Storage.h" />
     <ClInclude Include="..\..\Device\src\defines.h" />
-    <ClInclude Include="..\..\Device\src\Device.h" />
     <ClInclude Include="..\..\Device\src\Display\Colors.h" />
     <ClInclude Include="..\..\Device\src\Display\Console.h" />
     <ClInclude Include="..\..\Device\src\Display\Display.h" />
@@ -278,7 +259,6 @@
     <ClInclude Include="..\..\Device\src\libs\HAL\stm32f4xx_hal_conf.h" />
     <ClInclude Include="..\..\Device\src\libs\USBH\usbh_conf.h" />
     <ClInclude Include="..\..\Device\src\libs\USBH\usbh_diskio.h" />
-    <ClInclude Include="..\..\Device\src\Log.h" />
     <ClInclude Include="..\..\Device\src\main.h" />
     <ClInclude Include="..\..\Device\src\Menu\BufferButtons.h" />
     <ClInclude Include="..\..\Device\src\Menu\HandlersKeys.h" />
@@ -301,7 +281,6 @@
     <ClInclude Include="..\..\Device\src\Menu\Pages\Include\PageTime.h" />
     <ClInclude Include="..\..\Device\src\Menu\Pages\Include\PageTrig.h" />
     <ClInclude Include="..\..\Device\src\Multimeter\Multimeter.h" />
-    <ClInclude Include="..\..\Device\src\Object.h" />
     <ClInclude Include="..\..\Device\src\Osci\BottomPart.h" />
     <ClInclude Include="..\..\Device\src\Osci\Cursors.h" />
     <ClInclude Include="..\..\Device\src\Osci\FrequencyCounter.h" />
@@ -320,7 +299,7 @@
     <ClInclude Include="..\..\Device\src\Settings\SettingsNRST.h" />
     <ClInclude Include="..\..\Device\src\Settings\SettingsService.h" />
     <ClInclude Include="..\..\Device\src\Settings\SettingsTime.h" />
-    <ClInclude Include="..\..\Device\src\Tables.h" />
+    <ClInclude Include="..\..\Device\src\stdafx.h" />
     <ClInclude Include="..\..\Device\src\Tester\Tester.h" />
     <ClInclude Include="..\..\Device\src\Utils\CommonFunctions.h" />
     <ClInclude Include="..\..\Device\src\Utils\Debug.h" />
@@ -384,10 +363,6 @@
     <ClInclude Include="..\..\Device\src\Utils\Values.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\common\_VS\algorithm" />
-    <None Include="..\..\common\_VS\cstdlib" />
-    <None Include="..\..\common\_VS\cstring" />
-    <None Include="..\..\common\_VS\limits" />
     <None Include="..\..\Device\src\Display\Font\font5.inc" />
     <None Include="..\..\Device\src\Display\Font\font8.inc" />
     <None Include="..\..\Device\src\Display\Font\fontUGO.inc" />
@@ -400,7 +375,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{C23F96B0-1550-4A0F-8E49-0DC211BCED2C}</ProjectGuid>
     <RootNamespace>FPGA</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
     <ProjectName>Device</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -449,7 +424,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>..\..\common\_VS;..\..\Device\src;..\..\Device\src\libs\HAL;..\..\Device\src\libs\FatFS;..\..\Device\src\libs\USBH;..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc;..\..\common\libs\STM32Cube_F4\Drivers\CMSIS\Device\ST\STM32F4xx\Include;..\..\common\libs\STM32Cube_F4\Drivers\CMSIS\Include;..\..\common\libs\STM32Cube_F4\Middlewares\Third_Party\FatFs\src;..\..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Core\Inc;..\..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Class\MSC\Inc;..\..\common</IncludePath>
+    <IncludePath>..\..\common\_VS;..\..\Device\src;..\..\Device\src\libs\HAL;..\..\Device\src\libs\FatFS;..\..\Device\src\libs\USBH;..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc;..\..\common\libs\STM32Cube_F4\Drivers\CMSIS\Device\ST\STM32F4xx\Include;..\..\common\libs\STM32Cube_F4\Drivers\CMSIS\Include;..\..\common\libs\STM32Cube_F4\Middlewares\Third_Party\FatFs\src;..\..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Core\Inc;..\..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Class\MSC\Inc;..\..\common;$(IncludePath)</IncludePath>
     <OutDir>.\Debug\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -469,7 +444,8 @@
       <PreprocessorDefinitions>USE_HAL_DRIVER;STM32F437xx;MSVC;WIN32;OLD_RECORDER;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalOptions>-MP %(AdditionalOptions)</AdditionalOptions>
       <MinimalRebuild>false</MinimalRebuild>
-      <DisableSpecificWarnings>4068;4100;4201;4211;4333;4514;4623;4626;4774;4820;5027;5039;5045</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4068;4100;4201;4211;4333;4514;4529;4623;4626;4774;4820;5027;5039;5045</DisableSpecificWarnings>
+      <PrecompiledHeader>Use</PrecompiledHeader>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
