--- a/sources/OSC-VS/Device/FPGA.vcxproj.filters
+++ b/sources/OSC-VS/Device/FPGA.vcxproj.filters
@@ -91,6 +91,9 @@
     <Filter Include="Menu\Pages\PageService">
       <UniqueIdentifier>{a80fd5d5-77f1-44a9-a19f-f92988ad1007}</UniqueIdentifier>
     </Filter>
+    <Filter Include="libs\FatFS">
+      <UniqueIdentifier>{dc9614e8-1d98-40f1-9224-d169c1f6b736}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_nor.c">
@@ -137,12 +140,6 @@
     </ClCompile>
     <ClCompile Include="..\..\Device\src\Tester\Tester.cpp">
       <Filter>Tester</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_dac.c">
-      <Filter>libs\HAL</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_dac_ex.c">
-      <Filter>libs\HAL</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Device\src\Utils\CommonFunctions.cpp">
       <Filter>Utils</Filter>
@@ -444,6 +441,9 @@
     <ClCompile Include="..\..\Device\src\stdafx.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\vs_main.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal.h">
@@ -456,12 +456,6 @@
       <Filter>libs\HAL</Filter>
     </ClInclude>
     <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_cortex.h">
-      <Filter>libs\HAL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_dac.h">
-      <Filter>libs\HAL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_dac_ex.h">
       <Filter>libs\HAL</Filter>
     </ClInclude>
     <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_dma.h">
@@ -686,9 +680,6 @@
     <ClInclude Include="..\..\Device\src\Display\Font\font.h">
       <Filter>Display\Font</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_uart.h">
-      <Filter>libs\HAL</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\Device\src\Settings\SettingsMultimeter.h">
       <Filter>Settings</Filter>
     </ClInclude>
@@ -796,6 +787,24 @@
     </ClInclude>
     <ClInclude Include="..\..\Device\src\stdafx.h">
       <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\include\CMSIS\stm32f437xx.h">
+      <Filter>libs\CMSIS</Filter>
+    </ClInclude>
+    <ClInclude Include="src\include\HAL\stm32f4xx_hal_dac.h">
+      <Filter>libs\HAL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\include\HAL\stm32f4xx_hal_hcd.h">
+      <Filter>libs\HAL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\include\HAL\stm32f4xx_hal_uart.h">
+      <Filter>libs\HAL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\include\FatFS\ff.h">
+      <Filter>libs\FatFS</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Device\src\libs\FatFS\ffconf.h">
+      <Filter>libs\FatFS</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
